# ForgeCli

./: .env.example  .gitignore  README.md  forgecli.toml  main.ts  promise-example.js  pyproject.toml
.github/workflows/: ci.yml
docs/: OVERVIEW.md
examples/forgecli-demo-plugin/demo_plugin/: __init__.py
forgecli/: __init__.py
forgecli/builder/: __init__.py  builder.py  editor.py  formatter.py
forgecli/cli/: __init__.py  bootstrap.py  commands_ask.py  commands_auth.py  commands_build.py  commands_commit.py  commands_config.py  commands_docs.py  commands_doctor.py  commands_explain.py  commands_forge.py  commands_git.py  commands_graph.py  commands_history.py  commands_index.py  commands_info.py  commands_init.py  commands_model.py  commands_optimizer.py  commands_plan.py  commands_plugin.py  commands_providers.py  commands_release.py  commands_review.py  commands_status.py  commands_update.py  main.py  ui.py
forgecli/commit/: analyzer.py
forgecli/config/: __init__.py  loader.py  settings.py  writer.py
forgecli/core/: __init__.py  container.py  context.py  credentials.py  errors.py  events.py  logging.py  plugins.py  service.py  verification.py
forgecli/docs/: generator.py
forgecli/engine/: __init__.py  defaults.py  plugins.py  runner.py
forgecli/engine/stages/: __init__.py  context_optimizer.py  execution_engine_stage.py  git_engine.py  intent_analyzer.py  model_router.py  planning_engine.py  repository_analyzer.py  validation_engine.py
forgecli/git/: __init__.py  commit.py  repo.py  service.py
forgecli/graph/: __init__.py  backend_graphify.py  edge.py  graph.py  graphify.py  indexer.py  node.py  repository.py
forgecli/memory/: __init__.py  cache.py  history.py  store.py
forgecli/optimizer/ponytail/: __init__.py
forgecli/orchestrator/: __init__.py
forgecli/planner/: __init__.py  agent.py  plan.py  planner.py  render.py  serialize.py  software.py
forgecli/platform/: __init__.py  core.py  deps.py  paths.py  shell.py  update.py
forgecli/plugins/: __init__.py
forgecli/prompts/: __init__.py  loader.py  registry.py  renderer.py
forgecli/providers/: __init__.py  anthropic.py  base.py  builtin.py  google.py  http_base.py  mock.py  openai.py  openai_compatible.py  router.py  router_state.py
forgecli/review/: __init__.py  analyzer.py  diff.py  finding.py  report.py  repository.py  reviewer.py  suggestions.py
forgecli/sdk/: __init__.py  events.py  interfaces.py  loader.py  manager.py  manifest.py  sandbox.py  version.py
forgecli/templates/: __init__.py  engine.py  registry.py
forgecli/utils/: __init__.py  fs.py  ids.py  io.py  paths.py  timing.py
tests/: __init__.py  conftest.py  test_auth_provider.py  test_build_pipeline.py  test_cli.py  test_commit.py  test_config.py  test_container.py  test_graph.py  test_graphify_client.py  test_init.py  test_memory.py  test_model_commands.py  test_optimizer.py  test_orchestrator.py  test_orchestrator_cli.py  test_planner.py  test_planner_render.py  test_platform.py  test_prompts.py  test_providers.py  test_providers_http.py  test_repository_graph.py  test_review.py  test_router.py  test_sdk.py  test_software_planner.py  test_utils.py
(+7 files in other folders)
